--- a/src/main/webapp/details/details.html
+++ b/src/main/webapp/details/details.html
@@ -193,7 +193,7 @@
                                         //评论内容
                                         var c_content = document.createElement('div');
                                         commentMess.appendChild(c_content);
-                                        c_content.style.marginTop = '0.8em';
+                                        c_content.style.marginTop = '0.4em';
                                         c_content.style.fontSize = '0.8em';
                                         c_content.style.fontFamily = '微软雅黑';
                                         c_content.style.color = '#474747';
@@ -229,12 +229,11 @@
                                                 rBtn.style.cursor = 'pointer';
                                                 rBtn.innerHTML = '发送';
                                                 rBtn.onclick = function () {
-                                                    var replyMess = input.value;  //游琎加的
+                                                    var reply = textarea.value;
                                                     var replyMessXhr = new XMLHttpRequest();
-
                                                     replyMessXhr.open('post', '/sendChild');
                                                     replyMessXhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-                                                    replyMessXhr.send('content=' + replyMess + '&id=' + c_id);
+                                                    replyMessXhr.send('content=' + reply + '&id=' + c_id);
                                                     replyMessXhr.onreadystatechange = function () {
                                                         if (replyMessXhr.readyState == 4) {
                                                             if (replyMessXhr.status == 200) {
@@ -245,7 +244,7 @@
                                                     }
                                                 }
                                             }
-                                        })
+                                        })(c_id)
 
                                         //根据评论id获取回复
                                         var replyXhr = new XMLHttpRequest();
@@ -257,8 +256,7 @@
                                             if (replyXhr.readyState == 4) {
                                                 if (replyXhr.status == 200) {
                                                     var getReply = JSON.parse(replyXhr.responseText);
-
-                                                    for (var j = getReply.child.length - 1; j > 0; j--) {
+                                                    for (var j = getReply.child.length - 1; j >= 0; j--) {
                                                         var replyBox = document.createElement('div');
                                                         commentMess.appendChild(replyBox);
                                                         replyBox.style.background = '#dddddd';
@@ -283,7 +281,7 @@
                                                         replyBox.appendChild(r_content);
                                                         r_content.style.fontSize = '0.8em';
                                                         r_content.style.color = '#474747';
-                                                        r_content.style.marginTop = '0.5em';
+                                                        r_content.style.marginTop = '0.3em';
                                                         r_content.innerHTML = getReply.child[j].content;
                                                     }
                                                 }
