--- a/src/main/webapp/homeCare/homeCare.html
+++ b/src/main/webapp/homeCare/homeCare.html
@@ -11,7 +11,7 @@
 <body>
     <div id="contianer">
         <div id="jumpHome" onclick="jumpHome()">
-            返回首页</div> <div id="messBox">
+            <<返回首页</div> <div id="messBox">
         </div>
     </div>
 
@@ -53,7 +53,6 @@
                             userMess.style.width = '48em';
                             userMess.style.height = '6em';
                             userMess.style.marginBottom = '1.5em';
-                            userMess.style.background = '#ffcccc';
                             userMess.style.padding = '0.8em';
                             //用户头像
                             var userFace = document.createElement('img');
@@ -72,7 +71,6 @@
                             textBox.style.height = '5em';
                             textBox.style.padding = '0.5em';
                             textBox.style.marginLeft = '1em';
-                            textBox.style.background = '#ffffcc';
                             //用户昵称
                             var nameBox = document.createElement('div');
                             textBox.appendChild(nameBox);
