--- a/src/main/webapp/hotWeiBo/hotWeiBo.html
+++ b/src/main/webapp/hotWeiBo/hotWeiBo.html
@@ -59,16 +59,14 @@
                 if (hotXhr.readyState == 4) {
                     if (hotXhr.status == 200) {
                         var hotMess = JSON.parse(hotXhr.responseText);
-
                         for (var i = 0; i < hotMess.hotweibo.length; i++) {
                             var id = hotMess.hotweibo[i].id;
                             var sendMessage = document.createElement('div');
                             imformation.appendChild(sendMessage);
-                            sendMessage.style.padding = '0.625em';
-                            sendMessage.style.margin = '0.2em auto 0.625em';
-                            sendMessage.style.width = '36.25em';
-                            sendMessage.style.background = "white";
-                            sendMessage.style.marginBottom = '0.625em';
+                            sendMessage.style.padding = '1em';
+                            sendMessage.style.width = '34em';
+                            sendMessage.style.background = "#ffffff";
+                            sendMessage.style.marginBottom = '0.5em';
                             sendMessage.style.borderRadius = '0.2em';
 
                             //头像
@@ -90,6 +88,23 @@
                             userName.innerHTML = hotMess.hotweibo[i].u_name;// 获取用户昵称
                             userName.style.fontSize = "1.5625em";
                             userName.style.fontFamily = "微软雅黑";
+
+                            //微博热度
+                            var reDu = document.createElement('div');
+                            sendMessage.appendChild(reDu);
+                            reDu.style.display = 'inline-block';
+                            reDu.style.marginLeft = '21em';
+                            var reDuImg = document.createElement('img');
+                            reDu.appendChild(reDuImg);
+                            reDuImg.src = './img/火苗.png';
+                            reDuImg.style.display = 'inline-block';
+                            reDuImg.style.height = '1.2em';
+                            reDuImg.style.width = '1.2em';
+                            var reDuNum = document.createElement('span');
+                            reDu.appendChild(reDuNum);
+                            reDuNum.style.fontSize = '1.2em';
+                            reDuNum.style.color = '#474747';
+                            reDuNum.innerHTML = hotMess.hotweibo[i].number;//获取微博热度
 
                             // 时间
                             var time = document.createElement('p');
@@ -161,6 +176,193 @@
                             commentNumber.innerHTML = hotMess.hotweibo[i].c_number;//获取评论数
                         }
                     }
+                }
+            }
+        }
+
+        //搜索
+        function searchMess() {
+            var searchBox = document.getElementById('search');
+            var resultBox = document.getElementById('resultBox');
+            resultBox.style.display = 'block';
+            var searchMess = searchBox.value;
+            var xhr = new XMLHttpRequest();
+            //搜索的后端接口！
+            xhr.open('post', '/search');
+            xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+            xhr.send('content=' + searchMess);
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState == 4) {
+                    if (xhr.status == 200) {
+                        var searchResult = JSON.parse(xhr.responseText);
+
+                        //关闭窗口按钮
+                        var closeBox = document.createElement('div');
+                        resultBox.appendChild(closeBox);
+                        closeBox.style.height = '2em';
+                        closeBox.style.width = '3em';
+                        closeBox.style.lineHeight = '2em';
+                        closeBox.style.textAlign = 'center';
+                        closeBox.style.background = '#fcc5c5';
+                        closeBox.style.cursor = 'pointer';
+                        closeBox.style.borderRadius = '0.3em';
+                        closeBox.innerHTML = '关闭';
+                        closeBox.onclick = function () {
+                            resultBox.style.display = 'none';
+                            resultBox.innerHTML = "";
+                        }
+
+                        //展示搜索到的用户
+                        //查询的用户
+                        for (var i = 0; i < searchResult.user.length; i++) {
+                            var userBox = document.createElement('div');
+                            resultBox.appendChild(userBox);
+                            userBox.style.width = '50%';
+                            userBox.style.background = '#ffffff';
+                            userBox.style.display = 'inline-block';
+                            userBox.style.padding = '0.5em';
+                            userBox.style.margin = '0.5em 1em 1em';
+                            userBox.style.borderRadius = '0.3em';
+                            //用户昵称
+                            var u_name = document.createElement('div');
+                            userBox.appendChild(u_name);
+                            u_name.style.width = '70%';
+                            u_name.style.fontSize = '1.5em';
+                            u_name.innerHTML = searchResult.user[i].u_name;
+                            var u_id = searchResult.user[i].userID;
+                            //用户性别
+                            var u_sex = document.createElement('span');
+                            userBox.appendChild(u_sex);
+                            u_sex.style.marginTop = '0.5em';
+                            u_sex.style.fontSize = '1em';
+                            u_sex.style.color = '#474747';
+                            u_sex.innerHTML = searchResult.user[i].u_sex;
+                            //用户个人简介
+                            var u_intro = document.createElement('div');
+                            userBox.appendChild(u_intro);
+                            u_intro.style.width = '100%';
+                            u_intro.style.marginTop = '0.5em';
+                            u_intro.style.fontSize = '1em';
+                            u_intro.style.color = '#474747';
+                            u_intro.innerHTML = searchResult.user[i].u_intro;
+
+                            //添加关注
+                            var careBox = document.createElement('div');
+                            resultBox.appendChild(careBox);
+                            careBox.style.display = 'inline-block';
+                            careBox.style.padding = '0.5em';
+                            careBox.style.marginTop = '1em';
+                            careBox.style.marginLeft = '0.5em';
+                            careBox.style.height = '2em';
+                            careBox.style.width = '4.5em';
+                            careBox.style.textAlign = 'center';
+                            careBox.style.lineHeight = '2em';
+                            careBox.style.verticalAlign = 'top';
+                            careBox.style.borderRadius = '0.3em';
+                            careBox.innerHTML = '点击关注';
+                            careBox.style.cursor = 'pointer';
+                            careBox.style.background = '#eb9292';
+                            careBox.style.color = '#474747';
+                            (function LIFO(u_id) {
+                                careBox.onclick = function () {
+                                    var careXhr = new XMLHttpRequest();
+                                    //关注的后端接口！
+                                    careXhr.open('post', '/insertCare');
+                                    careXhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+                                    careXhr.send('follow_id=' + u_id);
+                                    careXhr.onreadystatechange = function () {
+                                        if (careXhr.readyState == 4) {
+                                            if (careXhr.status == 200) {
+                                                alert('关注成功');
+                                                careBox.innerHTML = '已关注';
+                                            }
+                                            else {
+                                                alert('关注失败');
+                                            }
+                                        }
+                                    }
+                                }
+                            })(u_id)
+                        }
+                        var wbBox = document.createElement('p');
+                        resultBox.appendChild(wbBox);
+                        wbBox.innerHTML = '搜索到的微博:';
+                        wbBox.style.marginLeft = '0.8em';
+                        wbBox.style.fontSize = '1.5em';
+                        wbBox.style.color = 'grey';
+
+                        //展示搜索的微博
+                        //查询的微博
+                        for (var j = 0; j < searchResult.weibo.length; j++) {
+                            var postBox = document.createElement('div');
+                            resultBox.appendChild(postBox);
+                            postBox.style.width = '80%';
+                            postBox.style.display = 'inline-block';
+                            postBox.style.borderRadius = '0.3em';
+                            postBox.style.background = 'white';
+                            postBox.style.margin = '0.5em 1em 1em';
+                            postBox.style.padding = '0.5em';
+                            //发微博的用户名
+                            var userName = document.createElement('div');
+                            postBox.appendChild(userName);
+                            userName.style.fontSize = '1.1em';
+                            userName.style.fontFamily = '黑体';
+                            userName.style.width = '50%';
+                            userName.innerHTML = searchResult.weibo[j].o_onick;// 获取用户昵称
+                            // 时间
+                            var time = document.createElement('p');
+                            postBox.appendChild(time);
+                            time.style.fontSize = "0.9em";
+                            time.style.color = '#474747';
+                            time.innerHTML = searchResult.weibo[j].p_times;// 获取时间
+                            // 微博内容
+                            var mess = document.createElement('div');
+                            postBox.appendChild(mess);
+                            mess.style.paddingTop = '0.3em';
+                            mess.style.color = '#474747';
+                            mess.style.fontSize = '0.9em';
+                            mess.innerHTML = searchResult.weibo[j].p_content;
+                            //获取微博id
+                            var p_id = searchResult.weibo[j].p_id;
+                            //加收藏
+                            var likeBox = document.createElement('div');
+                            resultBox.appendChild(likeBox);
+                            likeBox.style.display = 'inline-block';
+                            likeBox.style.width = '10%';
+                            likeBox.style.height = '2em';
+                            likeBox.style.background = 'green';
+                            likeBox.style.lineHeight = '2em';
+                            likeBox.style.textAlign = 'center';
+                            likeBox.style.cursor = 'pointer';
+                            likeBox.style.verticalAlign = 'top';
+                            likeBox.style.marginTop = '1em';
+                            likeBox.style.borderRadius = '0.3em';
+                            likeBox.innerHTML = '收藏';
+                            (function LIFO(p_id) {
+                                likeBox.onclick = function () {
+                                    var likeXhr = new XMLHttpRequest();
+                                    //收藏的后端接口！
+                                    likeXhr.open('post', '/insertCollection');
+                                    likeXhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+                                    likeXhr.send('id=' + p_id);
+                                    likeXhr.onreadystatechange = function () {
+                                        if (likeXhr.readyState == 4) {
+                                            if (likeXhr.status == 200) {
+                                                alert('收藏成功');
+                                                likeBox.innerHTML = '已收藏';
+                                            }
+                                            else {
+                                                alert('收藏失败');
+                                            }
+                                        }
+                                    }
+                                }
+                            })(p_id)
+
+                        }
+
+                    }
+
                 }
             }
         }
